docroot/themes/custom/twentyeighteen/sass/components/views/_announcements.scss
.body-sidebars-second aside.sidebar-second > .region-sidebar-second {
  .block-views-blockspecial-announcements-display-block-3 {
    margin-right: -15px;
    box-shadow: none;
  }
}

aside .block-views-blockspecial-announcements-display-block-3 {
  position: relative;
  border: none;
  border-radius: 0;
  padding: 20px 30px;
  box-sizing: border-box;
  background: linear-gradient(rgba($blk, 0.2) 0%, rgba($dark-gray, 1) 25%), rgba($dark-gray, 1);
  letter-spacing: 0.02em;
  margin-bottom: 0;

  &::after {
    content: ' ';
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
    opacity: 0.05;
    background-image: url(../images/GC18_motif_pattern_01-K.svg);
    background-size: 72px 72px;
  }

  h2 {
    padding: 0;
    color: rgba(254, 236, 127, 1);
    font-size: 1.5em;
    font-weight: 400;
  }

  p {
    color: $white;
  }

  .views-row {
    border-top: 1px solid $gold;
    margin-top: 1.5em;
    padding-top: 0.75em;
  }

  h3 {
    margin-bottom: 0.25em;
    text-transform: uppercase;
    color: rgba(254, 236, 127, 1);
    font-weight: 700;
    font-size: 1.17em;
  }
}

